CRUD works, set up cors and security